LIN-659/LIN-660 :: fix vertical align in horizontal section

--- a/application-framework/src/main/resources/linkki.scss
+++ b/application-framework/src/main/resources/linkki.scss
@@ -276,11 +276,6 @@ $linkki-sidebar-width: 56px !default;
     text-align: left;
   }
 
-  .v-horizontal > .v-slot,
-  .v-horizontal > .v-expand > .v-slot {
-     vertical-align: middle;
-  }
-    
   /*
   * Sections
   */
